[tool.poetry]
name = "mazes"
version = "0.1.0"
description = ""
authors = ["Elliot Hughes <elliot.hughes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
mypy = "^0.720.0"
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
